--- a/src/main/slick/slick-codegen.conf
+++ b/src/main/slick/slick-codegen.conf
@@ -1,7 +1,7 @@
 kafka {
   profile = "slick.jdbc.PostgresProfile$"
   codegen = {
-    package = "kafka.model"
+    package = "io.metabookmarks.kafka.offsetstorage"
   }
   db = {
     url = "jdbc:postgresql:kafkademo"
